--- a/templates/buyerInfo.html
+++ b/templates/buyerInfo.html
@@ -172,10 +172,7 @@ name:当前用户name
                 phone:"{{ phone }}",
             },
             success:function (data){
-                for (int i=0; i<data.length; i++){
-                    var item = data[i];
-                    
-                }
+            {#    遍历生成Item#}
             }
         })
     }
