--- a/templates/base_begin.html
+++ b/templates/base_begin.html
@@ -6,6 +6,6 @@
         <img src="static/login.jpg" alt="login-logo">
     </div>
     <div class="right-box">
-        {% block right_box %}
+        {% block right_box %} {% endblock %}
     </div>
 {% endblock %}
