--- a/templates/base.html
+++ b/templates/base.html
@@ -9,11 +9,11 @@ type:当前用户类型，1为买家，0为卖家
 #}
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
-    {% block import %}{% endblock %}
 {#通用css#}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
 {#独有css#}
-     <link rel="stylesheet" href="{% block css %}{% endblock %}">
+    <link rel="stylesheet" href="{% block css %}{% endblock %}">
+    <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
      {% block script %}{% endblock %}
 </head>
 <body>
