--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@ login
                 password:$("#password").val(),
             },
             success:function (){
-                console.log("success")
+                window.location.replace("shop.html")
             }
         })
     }
