--- a/templates/register.html
+++ b/templates/register.html
@@ -17,7 +17,8 @@ register
                 password:$("#password").val(),
                 type:$(".user-type").val(),
             },
-            success:function (){
+            success:function (data){
+                alert(data);
                 window.location.replace("login.html");
             }
         })
@@ -28,6 +29,11 @@ register
     window.onload = function (){
         $("#submit").click(function (){
             register();
+        });
+        $("input").keypress(function (even){
+            if (even.which==13){
+                login();
+            }
         });
     }
     </script>
