--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,12 @@ type:当前用户类型，1为买家，0为卖家
 {#独有css#}
     <link rel="stylesheet" href="{% block css %}{% endblock %}">
     <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+{#const#}
+    <script>
+        var phone;
+        var type;
+        var name;
+    </script>
      {% block script %}{% endblock %}
 </head>
 <body>
