--- a/templates/base.html
+++ b/templates/base.html
@@ -37,13 +37,13 @@ type:当前用户类型，1为买家，0为卖家
         {% if username %}
             <div class="username">
                 {% if type==0 %}
-                    <a href="seller.html">{{ username }}</a>
+                    <a href="/seller">{{ username }}</a>
                 {% elif type==1 %}
-                    <a href="buyer.html">{{ username }}</a>
+                    <a href="/buyer">{{ username }}</a>
                 {% endif %} 
             </div>
         {% else %}
-            <a href="Login.html">Login</a>
+            <a href="/login">Login</a>
         {% endif %}
     </div>
 {#主体#}
