--- a/templates/login.html
+++ b/templates/login.html
@@ -47,9 +47,14 @@ login
         <input type="password" id="password">
     </div>
 
+    <div class="register">
+        <a href="/register">Click here to register</a>
+    </div>
+
     <div class="submit">
         <button type="submit" id="submit">LOGIN</button>
     </div>
+
 
 </div>
 {% endblock %}
