--- a/templates/buyerInfo.html
+++ b/templates/buyerInfo.html
@@ -19,6 +19,17 @@ name:当前用户name
 
 {% block script %}
     <script>
+{#    session deal#}
+    $.ajax({
+        url:"/getSession",
+        type:"get",
+        success:function (data){
+            phone = data.phone;
+            type = data.type;
+            name = data.name;
+        }
+    })
+
     window.onload = function (){
         $("#info").click(function (){
             info();
