--- a/templates/login.html
+++ b/templates/login.html
@@ -9,18 +9,24 @@ login
 {% block script %}
     <script>
     function login(){
-        $.ajax({
-            url:"/login",
-            type:"post",
-            data:{
-                phone:$("#phone").val(),
-                password:$("#password").val(),
-            },
-            success:function (){
-                window.location.replace("/shop")
+    $.ajax({
+        url:"/authorize/login",
+        type:"post",
+        data: JSON.stringify({
+            phone:$("#phone").val(),
+            password:$("#password").val(),
+        }),
+        contentType: "application/json",
+        dataType: "json",
+        success:function (response){
+            if(response.success){
+                window.location.replace("/shop");
+            } else {
+                alert(response.message);
             }
-        })
-    }
+        }
+    });
+}
     </script>
 
     <script>
@@ -28,11 +34,12 @@ login
         $("#submit").click(function (){
             login();
         });
-        $("input").keypress(function (even){
-            if (even.which==13){
+        $("#password").keypress(function (event){
+            if (event.which == 13){
                 login();
             }
         });
+
     }
     </script>
 {% endblock %}
@@ -48,7 +55,8 @@ login
     </div>
 
     <div class="submit">
-        <button type="submit" id="submit">LOGIN</button>
+        <button type="button" id="submit">LOGIN</button>
+
     </div>
 
 </div>
