--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@ register
     <script>
     function register(){
         $.ajax({
-            url:"/register",
+            url:"/authorize/register",
             type:"post",
             data:{
                 phone:$("#phone").val(),
