--- a/templates/shop.html
+++ b/templates/shop.html
@@ -7,44 +7,119 @@
 #}
 {% block script %}
     <script>
+        var page_num;
+
+        $.ajax({
+            url:"/getSession",
+            type:"get",
+            contentType: "application/json",
+            dataType: "json",
+            success:function (data){
+                phone = data.phone;
+                type = data.type;
+                name = data.name;
+                {#console.log(phone);#}
+            }
+        })
+
         function generate(){
-            $("#search-box").keyup(function () {
-                $.ajax({
-                    url: "/searchItemByName",
-                    type: "get",
-                    data: {
-                        phone:" {{ phone }}",
-                        keyword: $("#search-box").val(),
-                        page_num: page_num,
-                    },
-                    success: function (data) {
-                    {#    创建item内容#}
-                    }
-                })
-            })
+
+            $(".item-box").empty();
+            $(".prev").empty();
+            $(".next").empty();
 
             $.ajax({
-                url:"/hasNextPage",
-                type:"get",
-                data: {
+                    url: "/shop/searchItemByName",
+                    type: "get",
+                    contentType: "application/json",
+                    dataType: "json",
+                    data: {
                         phone: phone,
                         keyword: $("#search-box").val(),
                         page_num: page_num,
                     },
                     success: function (data) {
+                        console.log(data)
+                        for (let i=0; i<data.length; i++){
+                            const item = data[i];
+
+                            const item_box = document.createElement("div");
+                            item_box.setAttribute("class", "item");
+                            item_box.click(function (){
+                                $.ajax({
+                                    url:"/item",
+                                    type: "get",
+                                    contentType: "application/json",
+                                    dataType: "json",
+                                    data:{
+                                        id:item.product_id,
+                                        phone: phone
+                                    },
+                                    success:function (){}
+                                })
+                            });
+                            $(".item-box").append(item_box);
+
+                            const img_box = document.createElement("div");
+                            img_box.setAttribute("class", "img-box");
+                            const img = document.createElement("img");
+                            img.setAttribute("src", item.image_src);
+                            item_box.append(img_box);
+                            img_box.append(img);
+
+                            const price_box = document.createElement("div");
+                            img_box.setAttribute("class", "price-box");
+                            const price = document.createElement("span");
+                            price.innerText = item.price;
+                            item_box.append(price_box);
+                            price_box.append(price);
+
+                            const name_box = document.createElement("div");
+                            img_box.setAttribute("class", "name-box");
+                            const name = document.createElement("span");
+                            name.innerText = item.price;
+                            item_box.append(name_box);
+                            name_box.append(name);
+
+                            const rating_box = document.createElement("div");
+                            img_box.setAttribute("class", "rating-box");
+                            const rating = document.createElement("span");
+                            rating.innerText = item.price;
+                            item_box.append(rating_box);
+                            rating_box.append(rating);
+
+                        }
+                    }
+                })
+
+            $.ajax({
+                url:"/shop/hasNextPage",
+                type:"get",
+                contentType: "application/json",
+                dataType: "json",
+                data: {
+                    phone: phone,
+                    keyword: $("#search-box").val(),
+                    page_num: page_num,
+                },
+                success: function (data) {
+                    if (data.success) {
                         var button = document.createElement("button");
                         button.setAttribute("class", "page-button");
-                        button.click(function (){
+                        button.innerText = "next";
+                        button.onclick = function () {
                             page_num++;
-                            generate();
-                        })
+                            generate()
+                        }
                         $(".next").append(button);
                     }
+                }
             })
 
             if (page_num>1){
                 var button = document.createElement("button");
                 button.setAttribute("class", "page-button");
+                button.innerText = "prev";
                 button.click(function (){
                     page_num--;
                     generate();
@@ -53,11 +128,13 @@
             }
         }
 
-
-        var page_num;
         window.onload = function () {
             page_num = 0;
             generate();
+
+            $("#search-box").keyup(function (){
+                generate();
+            })
 
 
         }
@@ -66,6 +143,10 @@
 
 {% block css %}
     /static/css/shop.css
+{% endblock %}
+
+{% block search_box %}
+    <input type="search" id="search-box" placeholder="输入商品">
 {% endblock %}
 
 {% block main %}
