--- a/templates/shop.html
+++ b/templates/shop.html
@@ -44,48 +44,50 @@
                             const item = data[i];
 
                             const item_box = document.createElement("div");
+                            const item_button = document.createElement("button");
                             item_box.setAttribute("class", "item");
-                            item_box.click(function (){
+                            item_button.onclick = function (){
                                 $.ajax({
-                                    url:"/item",
+                                    url:"/shop/isItemMatchSeller",
                                     type: "get",
                                     contentType: "application/json",
                                     dataType: "json",
                                     data:{
-                                        id:item.product_id,
+                                        product_id:item.product_id,
                                         phone: phone
                                     },
                                     success:function (){}
                                 })
-                            });
+                            }
                             $(".item-box").append(item_box);
+                            item_box.append(item_button);
 
                             const img_box = document.createElement("div");
                             img_box.setAttribute("class", "img-box");
                             const img = document.createElement("img");
                             img.setAttribute("src", item.image_src);
-                            item_box.append(img_box);
+                            item_button.append(img_box);
                             img_box.append(img);
 
                             const price_box = document.createElement("div");
                             img_box.setAttribute("class", "price-box");
                             const price = document.createElement("span");
                             price.innerText = item.price;
-                            item_box.append(price_box);
+                            item_button.append(price_box);
                             price_box.append(price);
 
                             const name_box = document.createElement("div");
                             img_box.setAttribute("class", "name-box");
                             const name = document.createElement("span");
-                            name.innerText = item.price;
-                            item_box.append(name_box);
+                            name.innerText = item.product_name;
+                            item_button.append(name_box);
                             name_box.append(name);
 
                             const rating_box = document.createElement("div");
                             img_box.setAttribute("class", "rating-box");
                             const rating = document.createElement("span");
-                            rating.innerText = item.price;
-                            item_box.append(rating_box);
+                            rating.innerText = item.rating;
+                            item_button.append(rating_box);
                             rating_box.append(rating);
 
                         }
