--- a/templates/register.html
+++ b/templates/register.html
@@ -8,6 +8,8 @@ register
 
 {% block script %}
     <script>
+    var user_type;
+
     function register(){
         $.ajax({
             url:"/authorize/register",
@@ -17,7 +19,7 @@ register
             data:JSON.stringify({
                 phone:$("#phone").val(),
                 password:$("#password").val(),
-                user_type: $(".user-type").val()==="buyer"?'1':'0',
+                user_type: user_type,
             }),
             success:function (data){
                 if(data.success){
@@ -32,6 +34,14 @@ register
 
     <script>
     window.onload = function (){
+        $("#buyer").click(function (){
+            console.log(this.value);
+            user_type = this.value;
+        });
+        $("#seller").click(function (){
+            console.log(this.value);
+            user_type = this.value;
+        });
         $("#submit").click(function (){
             register();
         });
@@ -43,10 +53,10 @@ register
 <div class="register-background-div">
     <div class="user-type">
         <label>buyer
-        <input type="radio" name="type" class="user-type" value="buyer">
+        <input type="radio" name="type" class="user-type" value="1" id="buyer">
         </label>
         <label>seller
-        <input type="radio" name="type" class="user-type" value="seller">
+        <input type="radio" name="type" class="user-type" value="0" id="seller">
             </label>
     </div>
 
