--- a/templates/shop.html
+++ b/templates/shop.html
@@ -8,19 +8,17 @@
 {% block script %}
     <script>
         var page_num;
-
         $.ajax({
-            url:"/getSession",
-            type:"get",
-            contentType: "application/json",
-            dataType: "json",
-            success:function (data){
-                phone = data.phone;
-                type = data.type;
-                name = data.name;
-                {#console.log(phone);#}
-            }
-        })
+                url:"/getSession",
+                type:"get",
+                contentType: "application/json",
+                dataType: "json",
+                success:function (data){
+                    phone = data.phone;
+                    type = data.type;
+                    name = data.name;
+                }
+            })
 
         function generate(){
 
@@ -39,7 +37,7 @@
                         page_num: page_num,
                     },
                     success: function (data) {
-                        console.log(data)
+                        console.log(phone)
                         for (let i=0; i<data.length; i++){
                             const item = data[i];
 
