--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,18 @@ type:当前用户类型，1为买家，0为卖家
         var phone;
         var type;
         var name;
+        $.ajax({
+                async:false,
+                url:"/getSession",
+                type:"get",
+                contentType: "application/json",
+                dataType: "json",
+                success:function (data){
+                    phone = data.phone;
+                    type = data.type;
+                    name = data.name;
+                }
+            })
     </script>
      {% block script %}{% endblock %}
 </head>
