--- a/templates/shop.html
+++ b/templates/shop.html
@@ -82,7 +82,6 @@
                     }
                 })
 
-            console.log(phone)
             $.ajax({
                 url:"/shop/hasNextPage",
                 type:"get",
@@ -94,7 +93,7 @@
                     page_num: page_num,
                 },
                 success: function (data) {
-                    if (data.success) {
+                    if (data.has_next) {
                         var button = document.createElement("button");
                         button.setAttribute("class", "page-button");
                         button.innerText = "next";
@@ -120,7 +119,7 @@
         }
 
         window.onload = function () {
-            page_num = 0;
+            page_num = 1;
             generate();
 
             $("#search-box").keyup(function (){
