--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,19 @@ type:当前用户类型，1为买家，0为卖家
                     phone = data.phone;
                     type = data.type;
                     name = data.name;
+                    const user_box = $(".user-box");
+                    const a = document.createElement("a");
+                    if (type==="0"){
+                        a.setAttribute("href", "/seller/sellerInfo");
+                        a.innerText = name;
+                    }else if(type==="1") {
+                        a.setAttribute("href", "/buyer/buyerInfo");
+                        a.innerText = name;
+                    }else{
+                        a.setAttribute("href", "/");
+                    }
+
+                    user_box.append(a)
                 }
             })
     </script>
@@ -46,17 +59,6 @@ type:当前用户类型，1为买家，0为卖家
     </div>
 {#用户info#}
     <div class="user-box">
-        {% if username %}
-            <div class="username">
-                {% if type==0 %}
-                    <a href="/seller">{{ username }}</a>
-                {% elif type==1 %}
-                    <a href="/buyer">{{ username }}</a>
-                {% endif %} 
-            </div>
-        {% else %}
-            <a href="/login">Login</a>
-        {% endif %}
     </div>
 {#主体#}
 </div>
