--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,7 @@ type:当前用户类型，1为买家，0为卖家
                         a.innerText = name;
                     }else{
                         a.setAttribute("href", "/");
+                        a.innerText = "Login";
                     }
 
                     user_box.append(a)
