--- a/templates/item.html
+++ b/templates/item.html
@@ -169,7 +169,7 @@
                     dataType: "json",
                     data:{
                         buyer_phone:phone,
-                        comment:self_content.value,
+                        content:self_content.value,
                         rating:self_rating.value,
                         product_id:"{{ product_id }}"
                     }
