--- a/templates/shop.html
+++ b/templates/shop.html
@@ -118,9 +118,13 @@
             }
         }
 
+        $(document).on("sessionLoaded", function() {
+            generate();
+        });
+
         window.onload = function () {
             page_num = 1;
-            generate();
+            {#generate();#}
 
             $("#search-box").keyup(function (){
                 generate();
