--- a/templates/base.html
+++ b/templates/base.html
@@ -31,16 +31,15 @@ type:当前用户类型，1为买家，0为卖家
                     const user_box = $(".user-box");
                     const a = document.createElement("a");
                     if (type==="0"){
-                        a.setAttribute("href", "/seller/sellerInfo");
+                        a.setAttribute("href", "/sellerInfo");
                         a.innerText = name;
                     }else if(type==="1") {
-                        a.setAttribute("href", "/buyer/buyerInfo");
+                        a.setAttribute("href", "/buyerInfo");
                         a.innerText = name;
                     }else{
                         a.setAttribute("href", "/");
                         a.innerText = "Login";
                     }
-                    console.log(a)
                     user_box.append(a)
 
                     $(document).trigger("sessionLoaded");
